creusot/tests/should_fail/prusti/partial_zombie/associated_type.stderr
error: binary operation `==` cannot be applied to type `(creusot_contracts::prusti::Zombie<<X as T>::A>, creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>, u32, (creusot_contracts::prusti::Zombie<<X as T>::A>, creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>))` since it doesn't implement `SnapEq`
  --> associated_type.rs:20:11
   |
20 | #[ensures(x == x)]
   |           ^

error: aborting due to 1 previous error

